feat!: retire the DAP debugging path in favour of IntelliJ's JVM debugger
Phase 6, unblocked by the Phase-3 gate going Green and by the native run
configuration landing in 7451ba4.

Removed: the debugAdapterServer registration, the DAP fileNamePatternMapping,
FlixDebugAdapterDescriptor and its factory, the vendored
backend/src/main/resources/dap/FlixDebugAdapter.java,
scripts/sync-debug-adapter.sh, and the checkDebugAdapterSync/syncDebugAdapter
Gradle tasks that existed only to stop the vendored copy drifting.

A replacement, not an addition: two debuggers cannot share one debuggee, since
they compete for suspension, breakpoints and lifecycle. Removed outright
rather than kept behind a flag -- the invariant ADR 0002 rests on is that
exactly one debugger owns the debuggee, a dormant second implementation is one
registration away from violating it, and a fallback nobody exercises is a
fallback nobody can trust.

This also settles which producer owns the gutter arrow, which was the last
open piece of Phase 4. RunLineMarkerContributor.withExecutorActions resolves
through run-configuration producers, so with the DAP producer gone the Flix
configuration is the only claimant for .flix. No precedence logic was needed,
which is why none was written.

The adapter is untouched as a project: it remains canonical in flix-lab for
its VS Code client. Only the IntelliJ-side copy and its registrations are
gone. LSP4IJ stays -- it is still the LSP client; only its DAP client is
unused.

Documentation corrected rather than left stale:

- the marketplace description advertised the DAP<->JDI bridge as a feature.
  It now describes what actually ships, including the property the DAP path
  could never offer: one session covering Flix and every other JVM language.
- the gate runbook told the reader not to press Debug because it would route
  to DAP. That instruction is now wrong in a way that would mislead. The
  manual Remote JVM Debug procedure is kept, with its reason stated -- it
  is