@@ -3,49 +3,18 @@
 The Phase-3 proof for [ADR 0002](adr/0002-native-jvm-debugger.md): does IntelliJ's own Java
 debugger, plus `FlixPositionManager` and `FlixJavaDebugAware`, actually debug Flix?
 
-Everything below runs against the **stock Remote JVM Debug** configuration. The gutter arrow and
-right-click Debug both route through LSP4IJ's DAP producer, so using either would test the path
-this gate exists to replace.
+Recorded outcome: **Green** — see the results table at the end.
 
-Record the outcome in the results table at the end. A gate nobody wrote down is a gate that gets
-re-run.
-
-## First: confirm which debugger you are actually running
-
-The two paths look identical in the editor — same red gutter, same Debug toolwindow — and differ
-only in the console. Getting this wrong invalidates every row, so check it before anything else.
-
-**You are on the DAP path** if the console shows any of:
-
-```text
-java --add-modules jdk.jdi …/FlixDebugAdapterNNNN.java --port 50351
-Launching 'Main.flix' with 'Flix (--Xdebug attach)' at 50351
-Listening for DAP client on port 50351
-[flix-debug-adapter] launching: …
-```
-
-`FlixDebugAdapter` is the bridge process, `Flix (--Xdebug attach)` is LSP4IJ's run configuration,
-and `[flix-debug-adapter]` is its logging. If you see these, `FlixPositionManager` is not involved
-and the gate is measuring the old path.
-
-**You are on the native path** if the console shows only:
-
-```text
-Connected to the target VM, address: 'localhost:5005', transport: 'socket'
-```
-
-and the debuggee's own output appears in the terminal you launched it from, not in the IDE.
-
-### How to end up on the wrong one
-
-Pressing **Debug** on a `.flix` file, or clicking the gutter arrow, hands the request to whichever
-run-configuration producer matches — today that is LSP4IJ's DAP producer, because the `*.flix`
-mapping in the backend module is still registered. It will auto-create a `Flix (--Xdebug attach)`
-configuration and use it.
-
-The native path has no producer yet, so it cannot be reached that way. It is reachable **only** by
-creating a Remote JVM Debug configuration by hand and launching the debuggee yourself, as below.
-That is the whole reason step 2 starts the program in a terminal rather than from the IDE.
+> **Historical note on how this gate was run.** At the time, the gutter arrow and right-click Debug
+> both routed to LSP4IJ's DAP producer, so every row here was measured through a hand-made
+> **Remote JVM Debug** configuration with the debuggee started from a terminal. That workaround is
+> no longer needed and no longer possible to get wrong: the DAP registration has since been removed
+> (Phase 6) and the plugin's own Flix run configuration is the only producer for `.flix`. Pressing
+> Debug now *is* the native path.
+>
+> The manual procedure is kept below because re-running the gate against a future IDE or compiler
+> should not depend on the run configuration being correct — it isolates the debugger from the
+> launcher. Use it when a row regresses and you need to know which of the two is at fault.
 
 ## Preconditions
 
@@ -100,15 +69,19 @@ in `.flix` and in a `.java` file the program calls.
 **Run → Edit Configurations → + → Remote JVM Debug**, host `localhost`, port `5005`, mode *Attach
 to remote JVM*. Run **that configuration** in Debug.
 
-Do not press Debug on `Main.flix`, and do not use the gutter arrow: both hand the request to
-LSP4IJ's DAP producer and silently run the path this gate is meant to replace. Re-check the console
-signatures above before continuing.
+Attaching by hand keeps the debugger under test separate from the launcher: if a row regresses,
+this says whether the fault is in the position manager or in the run configuration. For ordinary
+use, press Debug on the file — since Phase 6 that is the same native path.
 
-While suspended at the first breakpoint, confirm row 12 **now**, not afterwards:
+Row 12 asked whether a DAP process was running. It cannot be, now that nothing registers one:
 
 ```console
 ps aux | grep -c '[F]lixDebugAdapter'
 ```
+
+It is kept as a check rather than deleted because "exactly one debugger owns the debuggee" is the
+invariant ADR 0002 rests on, and a future re-introduction of a second one is exactly what this
+would catch.
 
 It must print `0` while the session is live. Run after the program exits, it prints `0` regardless,
 because the adapter is gone either way -- which is exactly how a DAP run can be mistaken for a
